--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -142,7 +142,7 @@ gFixedRate=0
 
 # RTS threshold
 
-#RTSThreshold=1048576
+RTSThreshold=1048576
 
 
 # Intra-BSS forward
@@ -157,7 +157,7 @@ WmmIsEnabled=0
 
 # 802.11d support
 
-g11dSupportEnabled=1
+g11dSupportEnabled=0
 
 # 802.11h support
 
@@ -186,11 +186,7 @@ FastRoamEnabled=1
 #Check if the AP to which we are roaming is better than current AP in terms of RSSI.
 #Checking is disabled if set to Zero.Otherwise it will use this value as to how better
 #the RSSI of the new/roamable AP should be for roaming
-# ifdef VENDOR_EDIT
-RoamRssiDiff=5
-# else
-#RoamRssiDiff=3
-# endif /* VENDOR_EDIT */
+RoamRssiDiff=3
 
 # If the RSSI of any available candidate is better than currently associated
 # AP by at least gImmediateRoamRssiDiff, then being to roam immediately (without
@@ -430,10 +426,7 @@ gEnableActiveModeOffload=1
 gScanAgingTime=0
 
 #Enable Scan Results Aging based on number of scans
-# ifdef VENDOR_EDIT
-# use default value 3
-#gScanResultAgeCount=1
-# endif /* VENDOR_EDIT */
+gScanResultAgeCount=1
 
 #Enable Power saving mechanism Based on Android Framework
 #If set to 0 Driver internally control the Power saving mechanism
@@ -469,7 +462,7 @@ gFlexConnectPowerFactor=0
 gNumChanCombinedConc=60
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=1
+gEnablePowerSaveOffload=2
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -653,20 +646,6 @@ gEnableTDLSScan=1
 
 #Disable scanning for DFS channels while roaming
 gAllowDFSChannelRoam=0
-
-# jeff.lin, 2015.12.17, reduce the scan time while turning WiFi on
-# ifdef VENDOR_EDIT
-gInitialScanNoDFSChnl=1
-gInitialDwellTime=20
-# endif
-
-# ifdef VENDOR_EDIT
-gSoftApMaxPeers=15
-gRoamBmissFirstBcnt=30
-gRoamBmissFinalBcnt=30
-RTSThreshold=2437
-gTcpDelAckThresholdHigh=10000
-# endif /* VENDOR_EDIT */
 
 END
 
