--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -33,6 +33,7 @@ on early-init
 
     # Setup zram options
     write /sys/block/zram0/comp_algorithm lz4
+    write /sys/block/zram0/max_comp_streams 4
     write /proc/sys/vm/swappiness 100
 
 on early-fs
