--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -34,7 +34,9 @@ on early-init
     # Setup zram options
     write /sys/block/zram0/comp_algorithm lz4
     write /sys/block/zram0/max_comp_streams 4
+
     write /proc/sys/vm/swappiness 100
+    write /proc/sys/vm/page-cluster 0
 
 on early-fs
     mkdir /firmware 0771 system system
